# RPlus-Tree_Proyecto-Final

./: .gitignore  CMakeLists.txt  Italo Mamani Huaricallo presentación.pptx  README.md  garbage.txt
source/: RPlus.hpp  RPlusTree.hpp  main.cpp  rplus-utils.hpp  rplus_tools.hpp  rplus_utils.hpp
